--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
       <textarea rows="7" placeholder="Enter your comment here..."></textarea>
     </div>
     <button id="submit" type="submit">Submit</button>
+      
       // Thank you
   
-.summary.hide
-  h2 Thanks for taking our survey! Your feedback helps us make better products.
+
+      <h2> Thanks for taking our survey! Your feedback helps us make better products.</h2>
 
   </form>
 </div>
